--- a/dealer.mobiva/Views/Inventory/Products.cshtml
+++ b/dealer.mobiva/Views/Inventory/Products.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Objects.ViewModel.InventoryViewModel
 
 @{
-    ViewBag.Title = "Stok";
+    ViewBag.Title = Model.ProductBrandName + " Ürünleri";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var productsSummary = Model.GetProductsInventoryByDealerId.GetProductsSummaryByDealerId;
     var productsSummaryDetail = Model.GetProductsInventoryByDealerId.GetProductsSummaryDetailByDealerId;
+    var products = Model.GetProductsInventoryByDealerId.GetProductsByDealerId;
 }
 
 <link rel="stylesheet" type="text/css" href="/Content/app-assets/vendors/css/cryptocoins/cryptocoins.css">
@@ -154,3 +155,4 @@
         </div>
     </section>
 </div>
+
